src/ktitlewidget.cpp
@@ -153,26 +153,19 @@ KTitleWidget::KTitleWidget(QWidget *parent)
     : QWidget(parent)
     , d(new KTitleWidgetPrivate(this))
 {
-    QFrame *titleFrame = new QFrame(this);
-    titleFrame->setAutoFillBackground(true);
-    titleFrame->setFrameShape(QFrame::StyledPanel);
-    titleFrame->setFrameShadow(QFrame::Plain);
-    titleFrame->setBackgroundRole(QPalette::Window);
-    titleFrame->setContentsMargins(0, 0, 0, 0);
-
     // default image / text part start
-    d->headerLayout = new QGridLayout(titleFrame);
+    d->headerLayout = new QGridLayout(this);
     d->headerLayout->setContentsMargins(0, 0, 0, 0);
     d->headerLayout->setSizeConstraint(QLayout::SetFixedSize);
 
-    d->textLabel = new QLabel(titleFrame);
+    d->textLabel = new QLabel(this);
     d->textLabel->setVisible(false);
     d->textLabel->setTextInteractionFlags(Qt::TextSelectableByMouse | Qt::LinksAccessibleByMouse);
 
-    d->imageLabel = new QLabel(titleFrame);
+    d->imageLabel = new QLabel(this);
     d->imageLabel->setVisible(false);
 
-    d->commentLabel = new QLabel(titleFrame);
+    d->commentLabel = new QLabel(this);
     d->commentLabel->setVisible(false);
     d->commentLabel->setOpenExternalLinks(true);
     d->commentLabel->setWordWrap(true);
@@ -180,10 +173,6 @@ KTitleWidget::KTitleWidget(QWidget *parent)
 
     d->updateIconAlignment(ImageRight); // make sure d->iconAlignment is left, to trigger initial layout
     // default image / text part end
-
-    QVBoxLayout *mainLayout = new QVBoxLayout(this);
-    mainLayout->addWidget(titleFrame);
-    mainLayout->setContentsMargins(0, 0, 0, 0);
 }
 
 KTitleWidget::~KTitleWidget() = default;
